--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
+annotated-types==0.7.0
+anyio==4.3.0
 asgiref==3.7.2
+certifi==2024.2.2
+distro==1.9.0
 Django==5.0.3
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+openai==1.30.3
 psycopg2-binary==2.9.9
+pydantic==2.7.1
+pydantic_core==2.18.2
 python-dotenv==1.0.1
+sniffio==1.3.1
 sqlparse==0.4.4
+tqdm==4.66.4
+typing_extensions==4.12.0
