--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-PORT=8000
-PGPORT=5432
+PORT=6001
+POSTGRES_PORT=5432
+POSTGRES_USER="digiform"
+POSTGRES_PASSWORD="digiform"
+POSTGRES_DB="digiform"
+POSTGRES_SOCKET="/var/run/postgresql"
+OPENAI_API_KEY=
+MODEL="gpt-3.5-turbo"
+DJANGO_SECRET_KEY="django-insecure-n^)*5*ysvl&@j!89mrjyu6^&*8(mvu9cc_78oa00tbb@=5l%0l"
