--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ POSTGRES_DB="digiform"
 OPENAI_API_KEY=
 MODEL="gpt-3.5-turbo"
 DJANGO_SECRET_KEY="django-insecure-n^)*5*ysvl&@j!89mrjyu6^&*8(mvu9cc_78oa00tbb@=5l%0l"
+TELEGRAM_BOT_TOKEN=""
