--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,28 @@
 annotated-types==0.7.0
-anyio==4.3.0
-asgiref==3.7.2
-certifi==2024.2.2
+anyio==4.4.0
+asgiref==3.8.1
+certifi==2024.6.2
 charset-normalizer==3.3.2
 distro==1.9.0
-Django==5.0.3
+Django==5.0.6
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
-openai==1.30.3
-packaging==24.0
+numpy==1.26.4
+openai==1.34.0
+packaging==24.1
+phonenumbers==8.13.38
+pillow==10.3.0
 psycopg2-binary==2.9.9
-pydantic==2.7.1
-pydantic_core==2.18.2
+pydantic==2.7.4
+pydantic_core==2.18.4
+pytesseract==0.3.10
 python-dotenv==1.0.1
 python-telegram-bot==21.3
 requests==2.32.3
 sniffio==1.3.1
-sqlparse==0.4.4
+sqlparse==0.5.0
 tqdm==4.66.4
-typing_extensions==4.12.0
+typing_extensions==4.12.2
 urllib3==2.2.1
