--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
 asgiref==3.8.1
+async-timeout==4.0.3
 attrs==23.2.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
 distro==1.9.0
 Django==5.0.6
+exceptiongroup==1.2.1
 frozenlist==1.4.1
 greenlet==3.0.3
 groq==0.9.0
@@ -34,10 +36,12 @@ psycopg2-binary==2.9.9
 pydantic==2.7.4
 pydantic_core==2.18.4
 pytesseract==0.3.10
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-telegram-bot==21.3
 PyYAML==6.0.1
 requests==2.32.3
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.30
 sqlparse==0.5.0
