feat: upgrade to llama-3.1

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ POSTGRES_USER="digiform"
 POSTGRES_PASSWORD="digiform"
 POSTGRES_DB="digiform"
 GROQ_API_KEY=""
-GROQ_CHAT_MODEL="llama3-70b-8192"
+GROQ_CHAT_MODEL="llama-3.1-70b-versatile"
 DJANGO_SECRET_KEY="django-insecure-n^)*5*ysvl&@j!89mrjyu6^&*8(mvu9cc_78oa00tbb@=5l%0l"
 TELEGRAM_BOT_TOKEN=""
